<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskActivity">

    <include
        layout="@layout/app_bar_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_addtask"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:elevation="0dp"
        app:icon="@drawable/ic_baseline_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="56dp"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/txt_tasktitlelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tasktitle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <EditText
                android:id="@+id/txt_newtasktitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/txt_tasktitle"
                android:ems="18"
                android:maxLength="100"
                android:hint="@string/txt_tasktitlehint"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/txt_startdatelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_startdate" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <EditText
                android:id="@+id/txt_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:maxLength="11"
                android:hint="@string/txt_startdatehint"
                android:inputType="date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/txt_duedatelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_duedate" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <EditText
                android:id="@+id/txt_duedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="11"
                android:hint="@string/txt_duedatehint"
                android:importantForAutofill="no"
                android:inputType="date" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/txt_desclabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_desc" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <EditText
                android:id="@+id/txt_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/txt_deschint"
                android:inputType="textMultiLine"
                android:maxLength="500" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>